# llama-3-Hackathon

./: .evn  .gitignore  .google-cookie  Dockerfile  README.md  app.py  history.db  main.py  pyproject.toml  requirements.txt  style.css
pages/: chatWithFile.py  chatWithWeb.py  history.py  style.css
utils/: __init__.py  common.py  helper.py  llm.py  model.py
