[tool.poetry]
name = "llama-3-hackathon"
version = "0.1.0"
description = ""
authors = ["Dark Coder <codewithdark90@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.36.0"
beautifulsoup4 = "^4.12.3"
curl-cffi = "^0.7.1"
g4f = "^0.3.2.2"
requests = "^2.32.3"
newspaper3k = "^0.2.8"
youtube-search-python = "^1.6.6"
lxml-html-clean = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
